# WinPlayer

./: .gitignore  Cargo.toml  LICENSE  PLAN.md  README.md
.github/workflows/: ci.yml
docs/: architecture.md  audio-pipeline.md  build.md  contributing.md  troubleshooting.md  usage.md
docs/superpowers/plans/: 2026-05-10-music-player.md
src/: last_played.rs  lib.rs  main.rs  renumberer.rs  settings.rs
src/data/: library.rs  mod.rs  scanner.rs  tags.rs
src/domain/: mod.rs  playback_state.rs  screen.rs  song.rs  sort.rs
src/engine/: decoder.rs  eq.rs  mod.rs  output.rs
src/playback/: controller.rs  deletion.rs  mod.rs  queue.rs
src/ui/: app.rs  fonts.rs  mod.rs  theme.rs  toasts.rs
src/ui/components/: mini_player.rs  mod.rs  page_header.rs  seek_slider.rs  song_row.rs  top_bar.rs
src/ui/screens/: albums.rs  all_songs.rs  artists.rs  equalizer.rs  folders.rs  mod.rs  now_playing.rs  queue.rs  settings.rs
