[package]
name = "winplayer"
version = "0.1.0"
edition = "2021"
authors = ["michel-ch <yepmtx@gmail.com>"]
description = "Native Windows music player"
license-file = "LICENSE"
publish = false

[dependencies]
# UI
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "wgpu"] }
egui = "0.29"
egui_extras = { version = "0.29", features = ["image"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }

# Audio
cpal = "0.15"
symphonia = { version = "0.5", features = ["all"] }
rubato = "0.15"
ringbuf = "0.4"
biquad = "0.5"
lofty = "0.21"

# Concurrency / data
parking_lot = "0.12"
crossbeam-channel = "0.5"
rand = "0.8"

# Filesystem / config
walkdir = "2"
directories = "5"
toml = "0.8"
serde = { version = "1", features = ["derive"] }

# Logging
log = "0.4"
env_logger = "0.11"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
opt-level = 3

[profile.dev]
opt-level = 1
